# demo

./: .all-contributorsrc  .editorconfig  .gitattributes  .gitignore  .markdownlint.json  .prettierignore  .prettierrc.yaml  Cargo.toml  README-en.md  README-nl.md  README.md  Taskfile.yaml  book.toml  devenv.nix
.github/: dependabot.yaml
.github/workflows/: deploy.yaml
content/licence/: CC-BY-SA-4.0-nl.md  EUPL-1.2-en.md
content/readme/: README-nl.md
docs/: 404.md  README.md  SUMMARY.md
docs/01-motivatie/: README.md
docs/02-aspecten/: README.md
docs/02-omschrijving/: 00-open-source.md  README.md
docs/03-problemen/: README.md
docs/04-techniek/: README.md
docs/05-organisatie/: README.md
docs/06-veiligheid/: README.md
docs/appendix/: 01-markdown.md  02-github.md  github.md  markdown.md
docs/governance/: README.md
docs/implementatie/: README.md  open-source.md
docs/omschrijving/: README.md  forum.md  kennisportaal.md
docs/problemen-en-oplossingen/: README.md
licence/: CC-BY-SA-4.0-en.md  CC-BY-SA-4.0-nl.md  EUPL-1.2-en.md  EUPL-1.2-nl.md  ODbL-1.0.md
src/: main.rs
theme/: pagetoc.css  pagetoc.js
