[package]
name = "NLJong_concept"
version = "0.1.0"
authors = ["NLJong <contact@nlj.ong>", "Luka Leer <luka.leer@gmail.com>"]
edition = "2021"
description = "An explanation of the NLJong concept"
readme = "README-en.md"
homepage = "https://concept.nlj.ong"
repository = "https://github.com/nljong/concept"
license = "EUPL-1.2"
license-file = "LICENCE.md"
keywords = ["NLJong", "concept", "explanation", "documentation"]
publish = false

[dependencies]
clap = { version = "4.5.11", features = ["derive"] }
colog = "1.3.0"
log = "0.4.22"
mdbook = "0.4.40"
mdbook-alerts = "0.6.1"
mdbook-linkcheck = "0.7.7"
